# wanghong_eval

./: .gitignore  README.md  breakthrough_eval_system_plan.md  models_registry-tmp.yaml  models_registry.mock.yaml  models_registry.openrouter.yaml  models_registry.yaml  pyproject.toml
breakthrough_eval/: __init__.py  aggregate.py  api_client.py  arxiv_frozen.py  arxiv_mcp.py  cli.py  contamination.py  controller.py  draft.py  hints.py  leaderboard.py  llm_client.py  logging_util.py  models.py  registry.py  specification.py  storage.py  taskqa.py  taskspec.py  webexport.py
breakthrough_eval/eval/: __init__.py  base.py  codex.py  eval.yaml  evaluator.py  llm.py  mock.py  openrouter_judge.py  prompts.py
breakthrough_eval/prover/: __init__.py  base.py  cli_common.py  codex.py  contamination.py  hermes.py  mock.py  opencode.py  openrouter.py  prompts.py  runner.py
docs/: app.js  data.js  index.html  style.css
results_archive_1781251071/: run_meta.json
results_archive_1781251071/eval/: kakeya_3d_wang_zahl__gemma-4-31b-hermes__L0__t0.json  kakeya_3d_wang_zahl__gemma-4-31b__L0__t0.json  (+43 more)
tasks/: frontiermath_ramsey_hypergraphs.yaml  kakeya_3d_wang_zahl.yaml  klartag_lattice_sphere_packing.yaml
tests/: conftest.py  test_aggregate_and_draft.py  test_arxiv_and_contamination.py  test_cli.py  test_cli_harness.py  test_codex_backend.py  test_controller_leaderboard.py  test_direct_api.py  test_eval.py  test_logging.py  test_openrouter.py  test_prover.py  test_real_stack.py  test_restricted_search_and_contamination.py  test_review_fixes.py  test_taskqa.py  test_taskspec.py
(+58 files in other folders)
